# PathologistAI

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
Data/dataset_lists/: annotations-patients.csv  hospital_mapping.csv  test_mapping.csv  train_mapping.csv
Data/dataset_lists/batches_test/: batch_mapping_batch_001.csv  batch_mapping_batch_003.csv  batch_mapping_batch_004.csv
Data/dataset_lists/batches_train/: batch_mapping_batch_001.csv  batch_mapping_batch_002.csv  batch_mapping_batch_003.csv  batch_mapping_batch_004.csv  batch_mapping_batch_005.csv  batch_mapping_batch_006.csv  batch_mapping_batch_007.csv
ML/: Groupe-2_ML_Camelyon17.ipynb
Pipeline/: download_train_from_aws.py  extract-metastasis_test.py  extract-metastasis_train.py  preprocessing_pipeline.py  process_batch_test.py  process_batch_train.py  run_batch_pipeline_test.py  run_batch_pipeline_train.py
Tools/: README.md  extract-patients-test_set.py  extract-patients-train_set.py  open-images.py  pyproject.toml  read-annotations.py
